<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".admin.AdminMenu">

    <TextView
        android:text="@string/admin_menu"
        android:textColor="@color/yellow"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textSize="@dimen/admin_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/addNewCar_btn"
        android:text="@string/add_new_car"
        android:background="@color/yellow"
        android:textColor="@color/white"
        android:layout_marginTop="35sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/searchbtnwidth"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/viewAllCars_btn"
        android:text="@string/all_cars"
        android:background="@color/yellow"
        android:textColor="@color/white"
        android:layout_marginTop="35sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/searchbtnwidth"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/logout_btn"
        android:text="@string/logout"
        android:background="@color/yellow"
        android:textColor="@color/white"
        android:layout_marginTop="35sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/searchbtnwidth"
        android:layout_height="wrap_content" />
</LinearLayout>
