<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.almajedgarage.almajedgarage.SplashActivity">

    <EditText
        android:drawableLeft="@drawable/searchicon"
        android:text="Search"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:cursorVisible="false"
        android:clickable="true"
        android:onClick="gotoSearchActivity"
        android:background="@drawable/mystyle"
        android:textColor="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <ImageView
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="270dp"
        android:layout_height="165dp" />
    <LinearLayout
        android:id="@+id/linear"
        android:weightSum="3"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/searchicon"
            android:text="@string/search"
            android:padding="@dimen/menuBtnPadding"
            android:clickable="true"
            android:onClick="gotoSearchActivity"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"/>
        <Button
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/locationicon"
            android:text="@string/location"
            android:padding="@dimen/menuBtnPadding"
            android:onClick="locationShow"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"/>
        <Button
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/contact"
            android:text="@string/contact"
            android:padding="@dimen/menuBtnPadding"
            android:onClick="showContact"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearAdmin"
        android:weightSum="3"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/contact"
            android:text="@string/aboutus"
            android:padding="@dimen/menuBtnPadding"
            android:onClick="showAboutus"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"/>
        <Button
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/admin"
            android:text="@string/admin"
            android:padding="@dimen/menuBtnPadding"
            android:onClick="gotoAdminLogin"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/adminLoginBtn"
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/login"
            android:text="@string/login"
            android:padding="@dimen/menuBtnPadding"
            android:onClick="gotoAdminLogin"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/adminLogoutBtn"
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/admin"
            android:text="@string/logout"
            android:padding="@dimen/menuBtnPadding"
            android:visibility="gone"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <Button
            android:id="@+id/addNewAdminBtn"
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/admin"
            android:text="@string/newadmin"
            android:onClick="addNewAdmin"
            android:padding="@dimen/menuBtnPadding"
            android:textColor="@color/yellow"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/manageAdminsBtn"
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/admin"
            android:text="@string/manageAdmins"
            android:onClick="manageAdmins"
            android:padding="@dimen/menuBtnPadding"
            android:textColor="@color/yellow"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/adminSettingsBtn"
            android:background="@drawable/mystyle"
            android:drawableTop="@drawable/settings"
            android:text="@string/settings"
            android:onClick="adminAccountSettings"
            android:padding="@dimen/menuBtnPadding"
            android:textColor="@color/yellow"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:maxWidth="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuMargin"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>
