<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".admin.AdminCarEditActivity">
    <LinearLayout
        android:background="@color/black"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/pics_upload"
            android:textColor="@color/yellow"
            android:textSize="@dimen/pics_upload_size"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120sp">
            <ImageView
                android:id="@+id/imageOne"
                android:padding="5sp"
                android:src="@drawable/add_picture"
                android:focusableInTouchMode="true"
                android:scaleType="fitXY"
                android:layout_width="120dp"
                android:layout_height="120dp" />
            <ImageView
                android:id="@+id/imageTwo"
                android:padding="5sp"
                android:src="@drawable/add_picture"
                android:scaleType="fitXY"
                android:layout_width="120dp"
                android:layout_height="120dp" />
            <ImageView
                android:id="@+id/imageThree"
                android:padding="5sp"
                android:src="@drawable/add_picture"
                android:scaleType="fitXY"
                android:layout_width="120dp"
                android:layout_height="120dp" />
        </LinearLayout>
        <TextView
            android:text="@string/current_status"
            android:textColor="@color/yellow"
            android:textSize="@dimen/pics_upload_size"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5sp"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/currentStatus_spin"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:backgroundTint="@color/yellow"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/comments"
            android:textColor="@color/yellow"
            android:textSize="@dimen/pics_upload_size"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5sp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/commentTV"
            android:textColor="@color/yellow"
            android:inputType="text"
            android:gravity="center"
            android:scrollbars="vertical"
            android:background="@drawable/mystyle"
            android:layout_width="match_parent"
            android:layout_height="60sp" />
        <LinearLayout
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:text="Charges  "
                android:inputType="number"
                android:textColor="@color/yellow"
                android:textSize="@dimen/reg_labels"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/chargesTV"
                android:layout_width="wrap_content"
                android:ems="11"
                android:gravity="center"
                android:inputType="number"
                android:layout_weight="2"
                android:textColor="@color/yellow"
                android:background="@drawable/mystyle"
                android:layout_height="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:text="Car No    "
                android:textColor="@color/yellow"
                android:textSize="@dimen/reg_labels"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/carnoTV"
                android:layout_width="wrap_content"
                android:ems="11"
                android:gravity="center"
                android:background="@drawable/mystyle"
                android:inputType="number"
                android:textColor="@color/yellow"
                android:layout_weight="2"
                android:layout_height="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:text="Customer"
                android:textColor="@color/yellow"
                android:textSize="@dimen/reg_labels"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/customerTV"
                android:layout_width="wrap_content"
                android:ems="11"
                android:gravity="center"
                android:background="@drawable/mystyle"
                android:inputType="text"
                android:textColor="@color/yellow"
                android:layout_weight="2"
                android:layout_height="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:text="Contact   "
                android:textColor="@color/yellow"
                android:textSize="@dimen/reg_labels"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/cantactTV"
                android:layout_width="wrap_content"
                android:ems="11"
                android:background="@drawable/mystyle"
                android:inputType="number"
                android:textColor="@color/yellow"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_height="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/saveUpdateCar"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/update"
            android:layout_gravity="center_horizontal"
            android:background="@color/yellow"
            android:layout_width="@dimen/searchbtnwidth"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>
